fix: update padding and margin values for improved layout consistency; adjust intro section spacing

--- a/docs/css/style -1.css
+++ b/docs/css/style -1.css
@@ -287,7 +287,7 @@ a {
 header {
   background:transparent;
   color: hsl(var(--clr-light));
-  padding: var(--space-l) 0;
+  padding: 0.5rem;
   position: relative;
 }
 
@@ -354,7 +354,7 @@ header::after {
 .site-nav a {
   color: #ebebd3;
   display: block;
-  padding: 2em 4em 2em 1.5em;
+  padding: 0.3rem 4rem 0 1.5rem;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -612,11 +612,11 @@ ul {
   .intro {
     place-items: center;
     grid-template-columns: 1fr;
-    margin-inline: 0 var(--space-l);
+    margin-inline: 0 var(--space-xl);
   }
 
   .intro-content{
-    padding-bottom: var(--space-6xl);
+    padding-bottom: var(--space-7xl);
   }
 
  .logo {
